--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <h1>Ciudades del Mundo</h1>
   <h3>America</h3>
   <h5>Estados Unidos</h5>
-  <p>Dallas, Boston, Seattle, San Francisco, New York</p>
+  <h6>Dallas, Boston, Seattle, San Francisco, New York</p>
   <h5>Mexico</h5>
-  <p>Guadalajara, Monterrey, Oaxaca, Tijuana, Queretaro</p>
+  <h6>Guadalajara, Monterrey, Oaxaca, Tijuana, Queretaro</p>
   <h3>Europa</h3>
   <h5>España</h5>
-  <p>Barcelona, Madrir, Sevilla, Valencia, Zaragoza</p>
+  <h6>Barcelona, Madrir, Sevilla, Valencia, Zaragoza</p>
   <h5>Alemania</h5>
-  <p>Berlin, Munich, Frankfurt, Hamburgo, colonia</p>
+  <h6>Berlin, Munich, Frankfurt, Hamburgo, colonia</p>
 </body>
 </html>
