--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
   <p>Barcelona, Madrir, Sevilla, Valencia, Zaragoza</p>
   <h5>Alemania</h5>
   <p>Berlin, Munich, Frankfurt, Hamburgo, colonia</p>
+  <br />
+  <a href="https://github.com/sofiahinojosa/coding-academy">View code here</a>
 </body>
 </html>
