--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   <h5>Alemania</h5>
   <p>Berlin, Munich, Frankfurt, Hamburgo, colonia</p>
   <br />
-  <a href="https://github.com/sofiahinojosa/coding-academy">View code here</a>
+  <a href="https://github.com/sofiahinojosa/coding-academy" taget"_blank>View code here</a>
 </body>
 </html>
