--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
   <title>Ciudades</title>
 </head>
 <body>
+  <center>
   <h1>Ciudades del Mundo</h1>
+  </center>
   <h3>America</h3>
-  <h5>Estados Unidos</h5>
-  <p>Dallas, Boston, Seattle, San Francisco, New York</p>
-  <h5>Mexico</h5>
-  <p>Guadalajara, Monterrey, Oaxaca, Tijuana, Queretaro</p>
+  <h5 style="margin-left:10px;">Estados Unidos</h5>
+  <p style="margin-left:25px;">Dallas, Boston, Seattle, San Francisco, New York</p>
+  <h5 style="margin-left:10px;">Mexico</h5>
+  <p style="margin-left:25px;">Guadalajara, Monterrey, Oaxaca, Tijuana, Queretaro</p>
   <h3>Europa</h3>
-  <h5>España</h5>
-  <p>Barcelona, Madrir, Sevilla, Valencia, Zaragoza</p>
-  <h5>Alemania</h5>
-  <p>Berlin, Munich, Frankfurt, Hamburgo, colonia</p>
+  <h5 style="margin-left:10px;">España</h5>
+  <p style="margin-left:25px;">Barcelona, Madrir, Sevilla, Valencia, Zaragoza</p>
+  <h5 style="margin-left:10px;">Alemania</h5>
+  <p style="margin-left:25px;">Berlin, Munich, Frankfurt, Hamburgo, colonia</p>
   <br />
   <a href="https://github.com/sofiahinojosa/coding-academy" target="_blank">View code here</a>
 </body>
