--- a/index.html
+++ b/index.html
@@ -27,26 +27,26 @@
   <hr />
   <br />
   <h1>Mitologia Griega</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac dictum turpis. Cras elementum, purus at bibendum
+  <p><b>Lorem ipsum dolor</b> sit amet, consectetur adipiscing elit. Integer ac dictum turpis. Cras elementum, purus at bibendum
   faucibus, lectus nisl congue diam, sit amet accumsan risus nisi id sapien. Aenean feugiat dapibus aliquam. Ut semper
-  imperdiet sollicitudin. Curabitur eget sagittis nulla. Integer nec lobortis lorem. Nam ut ex faucibus, maximus lacus
+  imperdiet sollicitudin. <strong>Curabitur eget sagittis nulla.</strong> Integer nec lobortis lorem. Nam ut ex faucibus, maximus lacus
   nec, scelerisque mauris. Curabitur ut dolor viverra, malesuada ex nec, tempor nunc. Donec eu nibh erat. Integer luctus
   orci diam, nec tincidunt ex placerat non. Donec egestas diam sit amet faucibus pulvinar. Integer accumsan porttitor
-  risus. Cras eu rutrum felis. Praesent viverra commodo eros. Donec efficitur eleifend tortor non maximus. Nullam sed
+  risus. Cras eu rutrum felis. Praesent viverra commodo eros. <i>Donec efficitur eleifend tortor non maximus.</i> Nullam sed
   purus libero.</p>
   <br />
-  <p>Integer non tellus at quam convallis tempor. Aliquam faucibus lobortis diam, eget mattis neque maximus eget. Duis
+  <p>Integer <em>non tellus at quam convallis</em> tempor. Aliquam faucibus <mark>lobortis diam, eget mattis</mark> neque maximus eget. Duis
   dapibus, ipsum vel ullamcorper pretium, neque odio lobortis sapien, ac facilisis sapien ex id velit. Vivamus in suscipit
-  risus. Aenean interdum urna sit amet diam tempor, at tempor tortor sagittis. Mauris eu pharetra nulla, a semper turpis.
+  risus. Aenean <small>interdum urna sit amet diam</small> tempor, at tempor <del>tortor sagittis.</del> Mauris eu <ins>pharetra nulla,</ins> a semper turpis.
   Aliquam sit amet augue orci. Donec vel sapien volutpat dui imperdiet egestas in eget sapien. Phasellus non arcu eu eros
   vulputate feugiat a id nisl. Phasellus leo nisl, rutrum vel dolor ac, rhoncus malesuada lorem. Praesent sit amet euismod
   lorem.</p>
   <br />
   <p>Pellentesque ullamcorper, nunc id varius bibendum, dolor risus hendrerit ex, non finibus diam dolor sit amet nulla.
-  Curabitur tincidunt suscipit lorem vitae gravida. Suspendisse potenti. Maecenas fringilla accumsan ex, ut vulputate enim
-  scelerisque sed. Integer a elementum mauris, sit amet volutpat erat. Vestibulum elit nisi, congue fermentum lorem
+  Curabitur tincidunt <sub>suscipit lorem vitae gravida. Suspendisse potenti. Maecenas fringilla accumsan ex, ut vulputate enim
+  scelerisque sed. Integer a elementum mauris, sit amet volutpat erat.</sub> Vestibulum elit nisi, congue fermentum lorem
   dapibus, semper laoreet mi. Nunc nisi tellus, mattis at nisi vel, luctus pharetra nisi. Nulla diam elit, tincidunt a
-  fringilla at, consequat nec nunc. Etiam sapien risus, ullamcorper ut euismod ut, rutrum ut ante. Fusce non sodales
+  fringilla at, consequat nec nunc. <sup>Etiam sapien risus, ullamcorper ut euismod ut, rutrum ut ante. Fusce non sodales</sup>
   magna. Fusce ac viverra ex.</p>
 </body>
 </html>
